css/main.css
@font-face {
  font-display: swap;
  font-family: 'lato_regular';
  src: url("../fonts/LatoLatin-Regular.woff2") format("woff2"), url("../fonts/LatoLatin-Regular.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  text-rendering: optimizeLegibility; }
@font-face {
  font-display: swap;
  font-family: 'lato_light';
  src: url("../fonts/LatoLatin-Light.woff2") format("woff2"), url("../fonts/LatoLatin-Light.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  font-display: swap; }
@font-face {
  font-display: swap;
  font-family: 'lato_hairline';
  src: url("../fonts/LatoLatin-Hairline.woff2") format("woff2"), url("../fonts/LatoLatin-Hairline.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  text-rendering: optimizeLegibility; }
@font-face {
  font-display: swap;
  font-family: 'lato_semibold';
  src: url("../fonts/LatoLatin-Semibold.woff2") format("woff2"), url("../fonts/LatoLatin-Semibold.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  text-rendering: optimizeLegibility; }
@font-face {
  font-display: swap;
  font-family: 'lato_bold';
  src: url("../fonts//LatoLatin-Bold.woff2") format("woff2"), url("../fonts//LatoLatin-Bold.woff") format("woff");
  font-style: normal;
  font-weight: bold;
  text-rendering: optimizeLegibility; }
html,
body {
  height: 100%;
  width: 100%; }

body {
  font-family: 'lato_regular', sans-serif;
  font-size: 18px;
  line-height: 26px; }

hr {
  border-color: #00ADE6;
  border-width: 3px;
  max-width: 50px; }

hr.light {
  border-color: white; }

a {
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
  color: #00ADE6; }
  a:hover, a:focus {
    color: #0087b3; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'lato_light', sans-serif; }

h2 {
  color: #00ADE6;
  margin-bottom: 30px;
  font-size: 32px;
  font-weight: 300; }

p {
  font-size: 18px;
  line-height: 1.5;
  margin-bottom: 20px; }

.bg-primary {
  background-color: #00ADE6; }

.bg-dark {
  background-color: #102F52;
  color: white; }

.text-faded {
  color: rgba(255, 255, 255, 0.7); }

section {
  padding: 155px 0; }

aside {
  padding: 50px 0; }

.no-padding {
  padding: 0; }

.navbar-default {
  background-color: white;
  border-color: rgba(16, 47, 82, 0.5);
  border-width: 0;
  font-family: 'lato_regular', Arial, sans-serif;
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s; }
  @media (max-width: 768px) {
    .navbar-default .navbar-brand {
      padding-top: 5px; } }
  @media (min-width: 769px) {
    .navbar-default .navbar-brand {
      height: 85px; } }
  .navbar-default .navbar-notice {
    padding-top: 20px;
    padding-left: 70px;
    font-weight: 700; }
  .navbar-default .navbar-header .navbar-brand, .navbar-default .navbar-notice {
    color: white;
    font-family: 'lato_regular', Arial, sans-serif;
    font-size: 12px; }
  .navbar-default .nav > li > a,
  .navbar-default .nav > li > a:focus {
    text-transform: uppercase;
    font-weight: 700;
    font-size: 13px;
    color: #102F52;
    outline: none; }
    .navbar-default .nav > li > a:hover,
    .navbar-default .nav > li > a:focus:hover {
      color: #00ADE6; }
  .navbar-default .nav > li.active > a,
  .navbar-default .nav > li.active > a:focus {
    color: #00ADE6 !important;
    background-color: transparent; }
    .navbar-default .nav > li.active > a:hover,
    .navbar-default .nav > li.active > a:focus:hover {
      background-color: transparent; }
  .navbar-default .nav.navbar-nav {
    float: none;
    width: 100%;
    text-align: center; }
    .navbar-default .nav.navbar-nav > li {
      float: none;
      display: inline-block; }
  @media (min-width: 769px) {
    .navbar-default {
      min-height: 155px;
      background-color: transparent; }
      .navbar-default .nav > li > a,
      .navbar-default .nav > li > a:focus {
        color: rgba(255, 255, 255, 0.7); }
        .navbar-default .nav > li > a:hover,
        .navbar-default .nav > li > a:focus:hover {
          color: white; }
      .navbar-default.affix {
        background-color: white;
        border-color: rgba(16, 47, 82, 0.5); }
        .navbar-default.affix .navbar-header .navbar-brand, .navbar-default.affix .navbar-notice {
          color: #000000; }
        .navbar-default.affix .nav > li > a,
        .navbar-default.affix .nav > li > a:focus {
          color: #102F52; }
          .navbar-default.affix .nav > li > a:hover,
          .navbar-default.affix .nav > li > a:focus:hover {
            color: #00ADE6; } }

header {
  position: relative;
  width: 100%;
  min-height: auto;
  background-repeat: no-repeat;
  background-color: #102F52;
  background-size: 100% auto;
  background-position: center top;
  background-image: url("../img/header.jpg");
  text-align: center;
  color: white; }
  header .header-content {
    position: relative;
    text-align: center;
    padding: 100px 15px 100px;
    width: 100%; }
    header .header-content .header-content-inner h1 {
      margin-top: 0;
      margin-bottom: 60px; }
      @media (min-width: 769px) {
        header .header-content .header-content-inner h1 {
          font-size: 46px !important; } }
    header .header-content .header-content-inner p {
      font-weight: 300;
      color: rgba(255, 255, 255, 0.7);
      font-size: 16px;
      margin-bottom: 50px; }
  @media (min-width: 769px) {
    header {
      min-height: 100%; }
      header .header-content {
        padding: 200px 15px 20px; }
        header .header-content .header-content-inner {
          max-width: 1000px;
          margin-left: auto;
          margin-right: auto; }
          header .header-content .header-content-inner p {
            font-size: 18px;
            max-width: 80%;
            margin-left: auto;
            margin-right: auto; }
      header .sunrun-stats-block {
        height: 320px; }
        header .sunrun-stats-block h4 {
          font-size: 50px;
          margin: 154px 0 14px 0; }
        header .sunrun-stats-block p {
          font-size: 14px;
          letter-spacing: 0.02em; }
        header .sunrun-stats-block hr {
          background-color: #fff;
          border-style: none;
          color: #fff;
          height: 1px;
          left: 100%;
          margin-left: -35px;
          position: absolute;
          top: 81px;
          width: 70px; }
        header .sunrun-stats-block .sunrun-at-glance {
          background: url("../img/sunrun-at-a-glance.svg") no-repeat center 40px;
          background-size: auto auto;
          background-size: 198px 78px;
          height: 100%; }
          header .sunrun-stats-block .sunrun-at-glance p {
            margin: 154px auto 0 auto;
            text-align: left;
            width: 198px; }
        header .sunrun-stats-block .col-md-2 {
          background-position: center 49px;
          background-repeat: no-repeat;
          min-width: 170px;
          position: relative;
          text-transform: uppercase; }
          header .sunrun-stats-block .col-md-2.foam-finger {
            background-image: url("../img/foam-finger.svg");
            background-size: 51px 83px; }
          header .sunrun-stats-block .col-md-2.people {
            background-image: url("../img/people.svg");
            background-size: 87px 60px; }
          header .sunrun-stats-block .col-md-2.google-pin {
            background-image: url("../img/google-pin-white.svg");
            background-size: 47px 67px; }
          header .sunrun-stats-block .col-md-2.lightning {
            background-image: url("../img/lightning.svg");
            background-size: 72px 72px; }
        header .sunrun-stats-block .text-muted {
          color: #ffffff;
          font-size: 12px;
          margin-bottom: 10px;
          margin-top: 20px; } }

.section-heading {
  margin-top: 0; }

#member-benefits {
  background-image: url("../img/bg-gradient-triangle.png");
  background-repeat: no-repeat;
  background-size: auto auto;
  background-position: right bottom; }
  #member-benefits p {
    margin-bottom: 50px; }
  #member-benefits ul li {
    margin-bottom: 30px; }
  #member-benefits .text-muted {
    color: #ffffff;
    font-size: 12px; }

.text-primary {
  color: #000000; }

.no-gutter > [class*='col-'] {
  padding-right: 0;
  padding-left: 0; }

.btn-default {
  color: #102F52;
  background-color: white;
  border-color: white;
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s; }
  .btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active, .open > .dropdown-toggle .btn-default {
    color: #102F52;
    background-color: #f2f2f2;
    border-color: #ededed; }
  .btn-default:active, .btn-default.active, .open > .dropdown-toggle .btn-default {
    background-image: none; }
  .btn-default.disabled, .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled.focus, .btn-default.disabled:active, .btn-default.disabled.active, .btn-default[disabled], .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled].focus, .btn-default[disabled]:active, .btn-default[disabled].active, fieldset[disabled] .btn-default, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default.focus, fieldset[disabled] .btn-default:active, fieldset[disabled] .btn-default.active {
    background-color: white;
    border-color: white; }
  .btn-default .badge {
    color: white;
    background-color: #102F52; }

.btn-primary {
  color: white;
  background-color: #00ADE6;
  border-color: #102F52;
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s; }
  .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle .btn-primary {
    color: white;
    background-color: #009acd;
    border-color: #0a1e34; }
  .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle .btn-primary {
    background-image: none; }
  .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
    background-color: #00ADE6;
    border-color: #102F52; }
  .btn-primary .badge {
    color: #00ADE6;
    background-color: white; }

.btn {
  font-family: 'lato_regular', Arial, sans-serif;
  border: none;
  border-radius: 300px;
  font-weight: 700;
  text-transform: uppercase; }

.btn-xl {
  padding: 15px 30px; }

#contact .fa {
  color: #102F52;
  font-size: 4em; }

::-moz-selection {
  color: white;
  text-shadow: none;
  background: #102F52; }

::selection {
  color: white;
  text-shadow: none;
  background: #102F52; }

img::selection {
  color: white;
  background: transparent; }

img::-moz-selection {
  color: white;
  background: transparent; }

body {
  -webkit-tap-highlight-color: #102F52; }

